force-app/main/default/objects/Ride_Report__c/Ride_Report__c.object-meta.xml
<CustomObject>
    <description>This object is used for reviewing the Sales representatives for SK and CHES</description>
    <label>Ride Report</label>
    <nameField>
        <displayFormat>RR {YYYY} - {00000}</displayFormat>  
        <label>Ride Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ride Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>