force-app/main/default/objects/Ride_Report__c/fields/Account_Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Branch_Manager__c</fullName>
    <formula>Branch__r.Branch_Manager__r.Email</formula>
    <label>Account Branch Manager</label>
    <type>Text</type>
</CustomField>