force-app/main/default/objects/Ride_Report__c/fields/Agreement_on_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Agreement_on_Next_Steps__c</fullName>  
    <label>Agreement on Next Steps?</label>       
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>