force-app/main/default/objects/Ride_Report__c/fields/Areas_of_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Improvement__c</fullName>
    <label>Areas of Improvement</label>  
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>