force-app/main/default/objects/Ride_Report__c/fields/Commitment_Objective_for_Every_Call__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Objective_for_Every_Call__c</fullName>
    <label>Commitment Objective for Every Call</label>  
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>