force-app/main/default/objects/Ride_Report__c/fields/Confirmed_Appts_Set__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Appts_Set__c</fullName>
    <inlineHelpText>0-3 = Needs Improvement; 4 = Meets Expectations; 5 = Exceeds Expectations</inlineHelpText>
    <label>Confirmed Appts Set</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>