force-app/main/default/objects/Ride_Report__c/fields/Connection_and_Discovery_Comments__c.field-meta.xml
<CustomField>
    <fullName>Connection_and_Discovery_Comments__c</fullName>
    <label>Connection and Discovery Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>