force-app/main/default/objects/Ride_Report__c/fields/Currently_on_PIP__c.field-meta.xml
<CustomField>
    <fullName>Currently_on_PIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently on PIP</label>
    <type>Checkbox</type>
</CustomField>