force-app/main/default/objects/Ride_Report__c/fields/Cust_Appts_Set__c.field-meta.xml
<CustomField>
    <fullName>Cust_Appts_Set__c</fullName>
    <inlineHelpText>Customer Appointments Set with Outlook and Salesforce Invites.</inlineHelpText>
    <label>Cust Appts Set Ahead of Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>