force-app/main/default/objects/Ride_Report__c/fields/Customer_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interactions__c</fullName>
    <inlineHelpText>Good Open Ended Questions Using Planner or Agenda</inlineHelpText>
    <label>Customer Interactions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted> 
        <valueSetName>Rating</valueSetName>  
    </valueSet>
</CustomField>