force-app/main/default/objects/Ride_Report__c/fields/Customers_Reviewed_E_Commerce__c.field-meta.xml
<CustomField>
    <fullName>Customers_Reviewed_E_Commerce__c</fullName>
    <inlineHelpText>Enter Number of Customers the E-Commerce Platform was Reviewed With</inlineHelpText>
    <label>Customers Reviewed E-Commerce</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>