force-app/main/default/objects/Ride_Report__c/fields/Date_of_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Review__c</fullName>
    <label>Date of Review</label>
    <type>Date</type>
</CustomField>