force-app/main/default/objects/Ride_Report__c/fields/Discovery_and_Advocate_Comments__c.field-meta.xml
<CustomField>
    <fullName>Discovery_and_Advocate_Comments__c</fullName>
    <label>Discovery and Advocate Comments</label>
    <type>TextArea</type>
</CustomField>