force-app/main/default/objects/Ride_Report__c/fields/End_of_Day_Comments__c.field-meta.xml
<CustomField>
    <fullName>End_of_Day_Comments__c</fullName>
    <label>End of Day Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>