force-app/main/default/objects/Ride_Report__c/fields/Facilities_Assessments_Completed__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Assessments_Completed__c</fullName>
    <inlineHelpText>Consistent utilization of tools (ie: SF, Facility Assessments, etc.)</inlineHelpText>
    <label>Facilities Assessments Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>