force-app/main/default/objects/Ride_Report__c/fields/Follow_Up_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Action_Items__c</fullName>
    <label>Follow-Up Action Items</label>
    <length>32768</length>
    <type>LongTextArea</type>  
</CustomField>