force-app/main/default/objects/Ride_Report__c/fields/Has_a_CHES_Sales_Planner_been_Created__c.field-meta.xml
<CustomField>
    <fullName>Has_a_CHES_Sales_Planner_been_Created__c</fullName>
    <label>Has a CHES Sales Planner been Created?</label>
    <type>Picklist</type>  
    <valueSet>  
        <restricted>true</restricted>  
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>