force-app/main/default/objects/Ride_Report__c/fields/Hot_Button_Issue_Identified__c.field-meta.xml
<CustomField>
    <fullName>Hot_Button_Issue_Identified__c</fullName>
    <label>Hot Button Issue Identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>    
    </valueSet>
</CustomField>