force-app/main/default/objects/Ride_Report__c/fields/Is_Record_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Record_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Record Locked</label>
    <type>Checkbox</type>
</CustomField>