force-app/main/default/objects/Ride_Report__c/fields/Leads_Review__c.field-meta.xml
<CustomField>
    <fullName>Leads_Review__c</fullName>
    <label>Leads Review</label>
    <length>250</length>
    <type>Text</type>
</CustomField>