force-app/main/default/objects/Ride_Report__c/fields/Live_it_3_6_5_Safety_Review__c.field-meta.xml
<CustomField>
    <fullName>Live_it_3_6_5_Safety_Review__c</fullName>
    <inlineHelpText>Assess the employee&apos;s safety performance throughout the day.</inlineHelpText>
    <label>Live it 3-6-5 - Safety Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>