force-app/main/default/objects/Ride_Report__c/fields/Meeting_with_Verbal_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Meeting_with_Verbal_Commitment__c</fullName>
    <inlineHelpText>SR/AM/Sr AM uses effective closing skills.</inlineHelpText>
    <label>Meeting with Verbal Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>