force-app/main/default/objects/Ride_Report__c/fields/Negotiation_Skills__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Skills__c</fullName>
    <inlineHelpText>Consistent and Effective Use of Negotiation Skills</inlineHelpText>
    <label>Negotiation Skills</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>