force-app/main/default/objects/Ride_Report__c/fields/New_Opportunities_Discussed__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunities_Discussed__c</fullName>
    <inlineHelpText>Including Cross-Sell</inlineHelpText>
    <label>New Opportunities Discussed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>