force-app/main/default/objects/Ride_Report__c/fields/New_Prospect_Appointments__c.field-meta.xml
<CustomField>
    <fullName>New_Prospect_Appointments__c</fullName>
    <inlineHelpText>1st Time Appointments</inlineHelpText>
    <label>New Prospect Appointments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>  
</CustomField>