force-app/main/default/objects/Ride_Report__c/fields/Opportunities_Review__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Review__c</fullName>
    <label>Opportunities Review</label>
    <length>250</length>
    <type>Text</type>
</CustomField>