force-app/main/default/objects/Ride_Report__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName> 
    <label>Overall Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>  
        <valueSetDefinition>
            <value>
                <fullName>Needs Improvement</fullName>   
            </value>
            <value>
                <fullName>Meets Expectations</fullName>
            </value>
            <value>
                <fullName>Exceeds Expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>