force-app/main/default/objects/Ride_Report__c/fields/PO_Cases_Review__c.field-meta.xml
<CustomField>
    <fullName>PO_Cases_Review__c</fullName>
    <label>PO Cases Review</label>
    <length>250</length>
    <type>Text</type>
</CustomField>