force-app/main/default/objects/Ride_Report__c/fields/PPE_Stocked__c.field-meta.xml
<CustomField>
    <fullName>PPE_Stocked__c</fullName>
    <inlineHelpText>All Necessary PPE is in Van for Day&apos;s Appointments</inlineHelpText>
    <label>PPE Stocked</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>