force-app/main/default/objects/Ride_Report__c/fields/Prepared_for_Day__c.field-meta.xml
<CustomField>
    <fullName>Prepared_for_Day__c</fullName>
    <inlineHelpText>Van Well Stocked and Organized Marketing Material</inlineHelpText>
    <label>Prepared for Day</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>