force-app/main/default/objects/Ride_Report__c/fields/Prepared_for_Day_CHES__c.field-meta.xml
<CustomField>
    <fullName>Prepared_for_Day_CHES__c</fullName>
    <inlineHelpText>Van Well Stocked and Organized Marketing Material</inlineHelpText>
    <label>Prepared for Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>   
        <valueSetName>Rating</valueSetName>  
    </valueSet>
</CustomField>