force-app/main/default/objects/Ride_Report__c/fields/Profiles_Pending_Response__c.field-meta.xml
<CustomField>
    <fullName>Profiles_Pending_Response__c</fullName>
    <label>Profiles Pending Response</label>
    <length>250</length>
    <type>Text</type>
</CustomField>