force-app/main/default/objects/Ride_Report__c/fields/Prospect_Calls_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Calls_Scheduled__c</fullName>
    <inlineHelpText>Prospecting Call Set Around Base Customer Meeting?</inlineHelpText>
    <label>Prospect Calls Scheduled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>  
    </valueSet>
</CustomField>