force-app/main/default/objects/Ride_Report__c/fields/Rating_Consistent_Utilization_of_Tools__c.field-meta.xml
<CustomField>
    <fullName>Rating_Consistent_Utilization_of_Tools__c</fullName>
    <label>Rating -Facilities Assessments Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_Values</valueSetName>
    </valueSet>
</CustomField>