force-app/main/default/objects/Ride_Report__c/fields/Rating_CR_and_CA__c.field-meta.xml
<CustomField>
    <fullName>Rating_CR_and_CA__c</fullName>
    <formula>IF( Confirmed_Appts_Set__c &lt;=3.4 ,&apos;Needs Improvement&apos;,
If(Confirmed_Appts_Set__c &gt;3.4 &amp;&amp; Confirmed_Appts_Set__c&lt;=4.4 ,&apos;Meets Expectations&apos;,
If(Confirmed_Appts_Set__c &gt;=4.5,&apos;Exceeds Expectations&apos;, null )))</formula>
    <label>Rating - Confirmed Appts Set</label>
    <type>Text</type>
</CustomField>  