force-app/main/default/objects/Ride_Report__c/fields/Rating_Ecommerce__c.field-meta.xml
<CustomField>
    <fullName>Rating_Ecommerce__c</fullName>
    <label>Rating - Customers Reviewed E-Commerce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_Values</valueSetName>
    </valueSet>
</CustomField>