force-app/main/default/objects/Ride_Report__c/fields/Rating_Epicenter__c.field-meta.xml
<CustomField>
    <fullName>Rating_Epicenter__c</fullName>
    <formula>If( Scorecard_Performance__c &lt;=2.49 ,&apos;Needs Improvement&apos;,
If(Scorecard_Performance__c &gt;2.49 &amp;&amp; Scorecard_Performance__c &lt;=3.50,&apos;Meets Expectations&apos;,
If(Scorecard_Performance__c&gt;3.50 &amp;&amp; Scorecard_Performance__c &lt;=5.00,&apos;Exceeds Expectations&apos;, null )))</formula>
    <label>Rating - Scorecard Performance</label>
    <type>Text</type>
</CustomField>