force-app/main/default/objects/Ride_Report__c/fields/Rating_Live_it_3_6_5_Safety_Review__c.field-meta.xml
<CustomField>
    <fullName>Rating_Live_it_3_6_5_Safety_Review__c</fullName>
    <label>Rating - Live it 3-6-5 - Safety Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_Values</valueSetName>
    </valueSet>
</CustomField>