force-app/main/default/objects/Ride_Report__c/fields/Rating_Opportunities_Review__c.field-meta.xml
<CustomField>
    <fullName>Rating_Opportunities_Review__c</fullName>
    <label>Rating - Opportunities Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_Values</valueSetName>
    </valueSet>
</CustomField>