force-app/main/default/objects/Ride_Report__c/fields/Rating_PO_Cases_Review__c.field-meta.xml
<CustomField>
    <fullName>Rating_PO_Cases_Review__c</fullName>
    <label>Rating - PO Cases Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_Values</valueSetName>
    </valueSet>
</CustomField>