force-app/main/default/objects/Ride_Report__c/fields/Rating_Presentation_Skills__c.field-meta.xml
<CustomField>
    <fullName>Rating_Presentation_Skills__c</fullName>
    <label>Rating - Sales Presentations Made</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_Values</valueSetName>
    </valueSet>
</CustomField>