force-app/main/default/objects/Ride_Report__c/fields/Rating_Profiles_Pending_Response__c.field-meta.xml
<CustomField>
    <fullName>Rating_Profiles_Pending_Response__c</fullName>
    <label>Rating - Profiles Pending Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_Values</valueSetName>
    </valueSet>
</CustomField>