force-app/main/default/objects/Ride_Report__c/fields/Rating_Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>Rating_Total_Sales__c</fullName>
    <formula>If(Total_Sales_Meetings_Completed__c &lt;=3.4 ,&apos;Needs Improvement&apos;,
If(Total_Sales_Meetings_Completed__c &gt;3.4 &amp;&amp; Total_Sales_Meetings_Completed__c &lt;=4.4 ,&apos;Meets Expectations&apos;,
If(Total_Sales_Meetings_Completed__c &gt;=4.5,&apos;Exceeds Expectations&apos;, null )))</formula>
    <label>Rating - Total Sales Meetings Completed</label>
    <type>Text</type>
</CustomField>