force-app/main/default/objects/Ride_Report__c/fields/Rating_Use_Of_Closing_Skills__c.field-meta.xml
<CustomField>
    <fullName>Rating_Use_Of_Closing_Skills__c</fullName>
    <label>Rating - Meeting with Verbal Commitment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_Values</valueSetName>
    </valueSet>
</CustomField>