force-app/main/default/objects/Ride_Report__c/fields/Rating_Van_Stocked__c.field-meta.xml
<CustomField>
    <fullName>Rating_Van_Stocked__c</fullName>
    <label>Rating - Prepared for Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_Values</valueSetName>
    </valueSet>
</CustomField>