force-app/main/default/objects/Ride_Report__c/fields/Ride_Day_Objective__c.field-meta.xml
<CustomField>
    <fullName>Ride_Day_Objective__c</fullName>
    <label>Ride Day Objective</label>
    <length>250</length>
    <type>Text</type>
</CustomField>