force-app/main/default/objects/Ride_Report__c/fields/Sales_Person_VP_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_VP_Email__c</fullName>
    <formula>Salesperson__r.Sales_VP__r.Email</formula>
    <label>Sales Person VP Email</label>
    <type>Text</type>
</CustomField>