force-app/main/default/objects/Ride_Report__c/fields/Sales_Presentations_Made__c.field-meta.xml
<CustomField>
    <fullName>Sales_Presentations_Made__c</fullName>
    <inlineHelpText>Effective Presentation Skills Using SK Brand Materials</inlineHelpText>
    <label>Sales Presentations Made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>