force-app/main/default/objects/Ride_Report__c/fields/Sales_Vehicle_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sales_Vehicle_Comments__c</fullName>
    <label>Sales Vehicle Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>