force-app/main/default/objects/Ride_Report__c/fields/Salesmanager__c.field-meta.xml
<CustomField>
    <fullName>Salesmanager__c</fullName>
    <formula>Salesperson__r.Manager_Name__c</formula>
    <label>Sales Manager</label>
    <type>Text</type>
</CustomField>