force-app/main/default/objects/Ride_Report__c/fields/Salesperson_Email__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Email__c</fullName>
    <formula>Salesperson__r.Email</formula>
    <label>Salesperson Email</label>
    <type>Text</type>
</CustomField>