force-app/main/default/objects/Ride_Report__c/fields/Salesperson_Sales_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Sales_Director_Email__c</fullName>
    <description>This field to send email notification to Salesperson Manager&apos;s Manager (VP)</description>
    <formula>Salesperson__r.Sales_Director__r.Email</formula>
    <label>Salesperson Sales Director Email</label>
    <type>Text</type>
</CustomField>