force-app/main/default/objects/Ride_Report__c/fields/Salesperson_Sales_SVP_Email__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Sales_SVP_Email__c</fullName>
    <formula>Salesperson__r.Sales_SVP__r.Email</formula>
    <label>Salesperson Sales SVP Email</label>
    <type>Text</type>
</CustomField>