force-app/main/default/objects/Ride_Report__c/fields/Salesperson_Title__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Title__c</fullName>
    <formula>Salesperson__r.Title</formula>
    <label>Salesperson Title</label>
    <type>Text</type>
</CustomField>