force-app/main/default/objects/Ride_Report__c/fields/Score_1_CHES__c.field-meta.xml
<CustomField>
    <fullName>Score_1_CHES__c</fullName>
    <label>Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>  
        <valueSetName>Rating</valueSetName>  
    </valueSet>
</CustomField>