force-app/main/default/objects/Ride_Report__c/fields/Scorecard_Performance__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Performance__c</fullName>
    <inlineHelpText>0 - 2.49 = Needs Improvement; 2.50 - 3.50 = Meets Expectations; 3.51 - 5.00 = Exceeds Expectations</inlineHelpText>
    <label>Scorecard Performance</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>