force-app/main/default/objects/Ride_Report__c/fields/Summary_of_Ride_Along__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Ride_Along__c</fullName>
    <label>Summary of Ride Along</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>