force-app/main/default/objects/Ride_Report__c/fields/Total_Sales_Meetings_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Meetings_Completed__c</fullName>
    <inlineHelpText>0-3 = Needs Improvement; 4 = Meets Expectations; 5+ = Exceeds Expectations</inlineHelpText>
    <label>Total Sales Meetings Completed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>