force-app/main/default/objects/Ride_Report__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_470, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_470))</formula>
    <label>URL</label>
    <type>Text</type>
</CustomField>