force-app/main/default/objects/Ride_Report__c/recordTypes/CHES_Ride_Report.recordType-meta.xml
<RecordType>
    <fullName>CHES_Ride_Report</fullName>
    <active>true</active>
    <label>CHES Ride Report</label> 
</RecordType>