force-app/main/default/objects/Ride_Report__c/recordTypes/SK_Ride_Report.recordType-meta.xml
<RecordType>
    <fullName>SK_Ride_Report</fullName>
    <active>true</active>
    <label>SK Ride Report</label> 
</RecordType>