force-app/main/default/objects/Ride_Report__c/validationRules/Confirmed_App_Set_should_be_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirmed_App_Set_should_be_Numeric</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(TEXT(Confirmed_Appts_Set__c),&quot;^[0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Confirmed_Appts_Set__c</errorDisplayField>
    <errorMessage>Please Enter Numeric Values Only</errorMessage>
</ValidationRule> 
 