force-app/main/default/objects/Ride_Report__c/validationRules/Restrict_Ride_Report_Status_As_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Ride_Report_Status_As_Draft</fullName>
    <active>true</active>    
    <errorConditionFormula>AND(
Not(ISPICKVAL(Status__c, &apos;Draft&apos;)),
ISNEW()
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>  
    <errorMessage>Status should be Draft while creating the report</errorMessage>
</ValidationRule>