force-app/main/default/objects/Ride_Report__c/validationRules/Scorecard_Review_between_0_to_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Scorecard_Review_between_0_to_5</fullName>
    <active>true</active>
    <errorConditionFormula>Scorecard_Performance__c &gt; 5</errorConditionFormula>
    <errorDisplayField>Scorecard_Performance__c</errorDisplayField>
    <errorMessage>Scorecard Performance value should be between 0 to 5</errorMessage>
</ValidationRule>