force-app/main/default/objects/Ride_Report__c/validationRules/Total_Sales_Value_Should_be_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Sales_Value_Should_be_Numeric</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(TEXT(Total_Sales_Meetings_Completed__c),&quot;^[0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Total_Sales_Meetings_Completed__c</errorDisplayField>
    <errorMessage>Please Enter Numeric Values Only</errorMessage>
</ValidationRule>