force-app/main/default/objects/Ride_Report__c/listViews/All_Finalized_Ride_Reports.listView-meta.xml
<ListView>
    <fullName>All_Finalized_Ride_Reports</fullName>
    <columns>NAME</columns>
    <columns>Salesperson__c</columns>
    <columns>Salesmanager__c</columns>
    <columns>Status__c</columns>
    <columns>Ride_Day_Objective__c</columns>
    <columns>Overall_Rating__c</columns>
    <columns>Date_of_Review__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>All Finalized Ride Reports</label>
</ListView>